--- a/src/engine/ruleset/integrations/aws/decoders/aws-elb.yml
+++ b/src/engine/ruleset/integrations/aws/decoders/aws-elb.yml
@@ -103,5 +103,5 @@ normalize:
       - event.outcome: failure
 
   - map:
-      - ~json: +delete
-      - ~tmp: +delete
+      - ~json: delete()
+      - ~tmp: delete()
