--- a/src/engine/ruleset/integrations/sophos/decoders/sophos-idp.yml
+++ b/src/engine/ruleset/integrations/sophos/decoders/sophos-idp.yml
@@ -109,4 +109,4 @@ normalize:
       - tags: [forwarded, preserve_original_even, sophos-xg]
       - \@timestamp: +concat/$~tmp.date/T/$~tmp.time
       - wazuh.decoders: +array_append/sophos-idp
-      - ~tmp: +delete
+      - ~tmp: delete()
