--- a/src/engine/ruleset/integrations/syslog/decoders/syslog.yml
+++ b/src/engine/ruleset/integrations/syslog/decoders/syslog.yml
@@ -39,6 +39,6 @@ parse:
 normalize:
   - map:
       - event.kind: event
-      - related.hosts: +array_append/$host.hostname
-      - process.name: +rename/$~TAG
-      - wazuh.decoders: +array_append/syslog
+      - related.hosts: array_append($host.hostname)
+      - process.name: rename($~TAG)
+      - wazuh.decoders: array_append(syslog)
