--- a/src/engine/ruleset/wazuh-core/decoders/core-hostinfo.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/core-hostinfo.yml
@@ -22,4 +22,4 @@ check:
 
 normalize:
   - map:
-      - wazuh.decoders: +array_append/core-hostinfo
+      - wazuh.decoders: array_append(core-hostinfo)
