--- a/src/engine/ruleset/wazuh-core/decoders/core-upgrade.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/core-upgrade.yml
@@ -20,3 +20,7 @@ parents:
 
 check:
   - wazuh.queue: 117 # UPGRADE_MQ 'u'
+
+normalize:
+  - map:
+      - wazuh.decoders: array_append(core-upgrade)
