--- a/src/engine/ruleset/integrations/apache-http/decoders/apache-access.yml
+++ b/src/engine/ruleset/integrations/apache-http/decoders/apache-access.yml
@@ -19,18 +19,18 @@ metadata:
     - https://httpd.apache.org/docs/2.4/logs.html
 
 check:
-  - event.original: +regex_match/\S+\s-\s\S+\s\[
+  - event.original: regex_match(\S+\s-\s\S+\s\[)
 #TODO: Once the events arrive tagged, uncomment these lines below and remove the above `event.original`
 # - event.module: apache-http
 # - event.dataset: apache-access
 
 definitions:
-  isSuccess: +is_not_null/$http.response.status_code AND +int_less/$http.response.status_code/400
-  isFailed: +is_not_null/$http.response.status_code AND +int_greater_or_equal/$http.response.status_code/400
+  isSuccess: is_not_null($http.response.status_code) AND int_less($http.response.status_code,400)
+  isFailed: is_not_null($http.response.status_code) AND int_greater_or_equal($http.response.status_code,400)
 
 parse:
   logpar:
-    - event.original: <source.address> - <user.name> [<event.created/26\/Dec\/2016:18:23:35 +0200>] "<~tmp.http.request>" <http.response.status_code> <~tmp./literal/->?<http.response.body.bytes>(? "<http.request.referrer>" "<user_agent.original>")
+    - event.original: <source.address> - <user.name> [<event.created/26\/Dec\/2016:18:23:35 +0200>] "<~tmp.http.request>" <http.response.status_code> <~tmp.dummy/literal/->?<http.response.body.bytes>(? "<http.request.referrer>" "<user_agent.original>")
     - event.original: <source.address> - <user.name> [<event.created/26\/Dec\/2016:18:23:35 +0200>] "-" <http.response.status_code> -
     - event.original: <source.address> - - [<event.created/%a %b %d %T %Y/en_US.UTF-8>] "-" <http.response.status_code> -
     - event.original: <destination.domain> <source.address> - <user.name> [<event.created/%a %b %d %T %Y/en_US.UTF-8>] "<http.request.method> <~tmp.url.orig> <http.version>?<~tmp.dash>" <http.response.status_code> <http.response.body.bytes>?<~tmp.dash> "<http.request.referrer>" "<user_agent.original>"
@@ -40,12 +40,12 @@ parse:
 
 normalize:
   - map:
-      - ~tmp.dash: +delete
-      - event.category: +array_append/web
+      - ~tmp.dash: delete()
+      - event.category: array_append(web)
       - event.kind: event
       - service.type: apache
-      - source.ip: +parse_ip/$source.address
-      - ~tmp.tls: +split/$network.protocol/v
+      - source.ip: parse_ip($source.address)
+      - ~tmp.tls: split($network.protocol, v)
       - ~tmp.tls-1: $~tmp.tls/1
       - tls.version_protocol: $~tmp.tls/0
       - tls.cipher: $tls.cipher
@@ -57,14 +57,14 @@ normalize:
       - ~tmp.http.request: <http.request.method> <url.original> <~tmp.http.version>
 
   - check:
-      - ~tmp.tls-1: +regex_match/\d+\.\d+
+      - ~tmp.tls-1: regex_match(\d+\.\d+)
     map:
       - tls.version: ~tmp.tls-1
 
   - check:
-      - ~tmp.tls-1: +regex_not_match/\d+\.\d+
+      - ~tmp.tls-1: regex_not_match(\d+\.\d+)
     map:
-      - tls.version: +concat/~tmp.tls-1/.0
+      - tls.version: concat($~tmp.tls-1, .0)
 
   - check: $isSuccess
     map:
@@ -74,12 +74,12 @@ normalize:
       - event.outcome: failure
 
   - check:
-      - source.ip: +not_exists
+      - source.ip: not_exists()
     map:
-      - source.domain: +parse_fqdn/$source.address
+      - source.domain: parse_fqdn($source.address)
 
   - map:
-      - url.extension: +regex_extract/$url.original/.*\.([^.]+)$
-      - ~tmp: +delete
+      - url.extension: regex_extract($url.original, .*\.([^.]+)$)
+      - ~tmp: delete()
   - map:
-      - wazuh.decoders: +array_append/apache-access
+      - wazuh.decoders: array_append(apache-access)
