--- a/src/engine/ruleset/integrations/auditd/decoders/auditd-kv.yml
+++ b/src/engine/ruleset/integrations/auditd/decoders/auditd-kv.yml
@@ -17,7 +17,7 @@ parents:
   - decoder/auditd/0
 
 check:
-  - ~kv_msg: +exists
+  - ~kv_msg: exists()
 
 parse:
   logpar:
@@ -29,7 +29,7 @@ normalize:
       - auditd.log.node: +rename/$~node
       #TODO: issue on +string_equal can't use it as a value
       - ~null_parenthesis: (null)
-      - ~kv_msg: +delete
+      - ~kv_msg: delete()
       - wazuh.decoders: +array_append/auditd-kv
 
   # Start of hexa to string fields transformation
@@ -46,7 +46,7 @@ normalize:
 
   - check: +is_null/$auditd.log.exe OR $auditd.log.exe==? OR +string_equal/$auditd.log.exe/$~null_parenthesis
     map:
-      - auditd.log.exe: +delete
+      - auditd.log.exe: delete()
   - map:
       - auditd.log.exe: +decode_base16/$auditd.log.exe
       - auditd.log.exe: +trim/both/"
@@ -54,7 +54,7 @@ normalize:
 
   - check: +is_null/$auditd.log.cmd OR auditd.log.cmd==? OR +string_equal/$auditd.log.cmd/$~null_parenthesis
     map:
-      - auditd.log.cmd: +delete
+      - auditd.log.cmd: delete()
   - map:
       - auditd.log.cmd: +decode_base16/$auditd.log.cmd
       - auditd.log.cmd: +trim/both/"
@@ -62,7 +62,7 @@ normalize:
 
   - check: +is_null/$auditd.log.data OR auditd.log.data==? OR +string_equal/$auditd.log.data/$~null_parenthesis
     map:
-      - auditd.log.data: +delete
+      - auditd.log.data: delete()
   - map:
       - auditd.log.data: +decode_base16/$auditd.log.data
       - auditd.log.data: +trim/both/"
@@ -70,7 +70,7 @@ normalize:
 
   - check: +is_null/$auditd.log.path OR auditd.log.path==? OR +string_equal/$auditd.log.path/$~null_parenthesis
     map:
-      - auditd.log.path: +delete
+      - auditd.log.path: delete()
   - map:
       - auditd.log.path: +decode_base16/$auditd.log.path
       - auditd.log.path: +trim/both/"
@@ -78,7 +78,7 @@ normalize:
 
   - check: +is_null/$auditd.log.comm OR auditd.log.comm==? OR +string_equal/$auditd.log.comm/$~null_parenthesis
     map:
-      - auditd.log.comm: +delete
+      - auditd.log.comm: delete()
   - map:
       - auditd.log.comm: +decode_base16/$auditd.log.comm
       - auditd.log.comm: +trim/both/"
@@ -86,7 +86,7 @@ normalize:
 
   - check: +is_null/$auditd.data.file OR auditd.data.file==? OR +string_equal/$auditd.data.file/$~null_parenthesis
     map:
-      - auditd.data.file: +delete
+      - auditd.data.file: delete()
   - map:
       - auditd.data.file: +decode_base16/$auditd.data.file
       - auditd.data.file: +trim/both/"
@@ -94,7 +94,7 @@ normalize:
 
   - check: +is_null/$auditd.log.name OR auditd.log.name==? OR +string_equal/$auditd.log.name/$~null_parenthesis
     map:
-      - auditd.log.name: +delete
+      - auditd.log.name: delete()
   - map:
       - auditd.log.name: +decode_base16/$auditd.log.name
       - auditd.log.name: +trim/both/"
@@ -102,7 +102,7 @@ normalize:
 
   - check: +is_null/$auditd.data.watch OR auditd.data.watch==? OR +string_equal/$auditd.data.watch/$~null_parenthesis
     map:
-      - auditd.data.watch: +delete
+      - auditd.data.watch: delete()
   - map:
       - auditd.data.watch: +decode_base16/$auditd.data.watch
       - auditd.data.watch: +trim/both/"
@@ -110,7 +110,7 @@ normalize:
 
   - check: +is_null/$auditd.log.cwd OR auditd.log.cwd==? OR +string_equal/$auditd.log.cwd/$~null_parenthesis
     map:
-      - auditd.log.cwd: +delete
+      - auditd.log.cwd: delete()
   - map:
       - auditd.log.cwd: +decode_base16/$auditd.log.cwd
       - auditd.log.cwd: +trim/both/"
@@ -118,7 +118,7 @@ normalize:
 
   - check: +is_null/$auditd.log.acct OR auditd.log.acct==? OR +string_equal/$auditd.log.acct/$~null_parenthesis
     map:
-      - auditd.log.acct: +delete
+      - auditd.log.acct: delete()
   - map:
       - auditd.log.acct: +decode_base16/$auditd.log.acct
       - auditd.log.acct: +trim/both/"
@@ -126,7 +126,7 @@ normalize:
 
   - check: +is_null/$auditd.data.dir OR auditd.data.dir==? OR +string_equal/$auditd.data.dir/$~null_parenthesis
     map:
-      - auditd.data.dir: +delete
+      - auditd.data.dir: delete()
   - map:
       - auditd.data.dir: +decode_base16/$auditd.data.dir
       - auditd.data.dir: +trim/both/"
@@ -134,7 +134,7 @@ normalize:
 
   - check: +is_null/$auditd.data.vm OR auditd.data.vm==? OR +string_equal/$auditd.data.vm/$~null_parenthesis
     map:
-      - auditd.data.vm: +delete
+      - auditd.data.vm: delete()
   - map:
       - auditd.data.vm: +decode_base16/$auditd.data.vm
       - auditd.data.vm: +trim/both/"
@@ -142,7 +142,7 @@ normalize:
 
   - check: +is_null/$auditd.data.old-chardev OR auditd.data.old-chardev==? OR +string_equal/$auditd.data.old-chardev/$~null_parenthesis
     map:
-      - auditd.data.old-chardev: +delete
+      - auditd.data.old-chardev: delete()
   - map:
       - auditd.data.old-chardev: +decode_base16/$auditd.data.old-chardev
       - auditd.data.old-chardev: +trim/both/"
@@ -150,7 +150,7 @@ normalize:
 
   - check: +is_null/$auditd.data.new-chardev OR auditd.data.new-chardev==? OR +string_equal/$auditd.data.new-chardev/$~null_parenthesis
     map:
-      - auditd.data.new-chardev: +delete
+      - auditd.data.new-chardev: delete()
   - map:
       - auditd.data.new-chardev: +decode_base16/$auditd.data.new-chardev
       - auditd.data.new-chardev: +trim/both/"
@@ -158,7 +158,7 @@ normalize:
 
   - check: +is_null/$auditd.data.old-disk OR auditd.data.old-disk==? OR +string_equal/$auditd.data.old-disk/$~null_parenthesis
     map:
-      - auditd.data.old-disk: +delete
+      - auditd.data.old-disk: delete()
   - map:
       - auditd.data.old-disk: +decode_base16/$auditd.data.old-disk
       - auditd.data.old-disk: +trim/both/"
@@ -166,7 +166,7 @@ normalize:
 
   - check: +is_null/$auditd.data.new-disk OR auditd.data.new-disk==? OR +string_equal/$auditd.data.new-disk/$~null_parenthesis
     map:
-      - auditd.data.new-disk: +delete
+      - auditd.data.new-disk: delete()
   - map:
       - auditd.data.new-disk: +decode_base16/$auditd.data.new-disk
       - auditd.data.new-disk: +trim/both/"
@@ -174,7 +174,7 @@ normalize:
 
   - check: +is_null/$auditd.data.old-fs OR auditd.data.old-fs==? OR +string_equal/$auditd.data.old-fs/$~null_parenthesis
     map:
-      - auditd.data.old-fs: +delete
+      - auditd.data.old-fs: delete()
   - map:
       - auditd.data.old-fs: +decode_base16/$auditd.data.old-fs
       - auditd.data.old-fs: +trim/both/"
@@ -182,7 +182,7 @@ normalize:
 
   - check: +is_null/$auditd.data.new-fs OR auditd.data.new-fs==? OR +string_equal/$auditd.data.new-fs/$~null_parenthesis
     map:
-      - auditd.data.new-fs: +delete
+      - auditd.data.new-fs: delete()
   - map:
       - auditd.data.new-fs: +decode_base16/$auditd.data.new-fs
       - auditd.data.new-fs: +trim/both/"
@@ -190,7 +190,7 @@ normalize:
 
   - check: +is_null/$auditd.data.old-net OR auditd.data.old-net==? OR +string_equal/$auditd.data.old-net/$~null_parenthesis
     map:
-      - auditd.data.old-net: +delete
+      - auditd.data.old-net: delete()
   - map:
       - auditd.data.old-net: +decode_base16/$auditd.data.old-net
       - auditd.data.old-net: +trim/both/"
@@ -198,7 +198,7 @@ normalize:
 
   - check: +is_null/$auditd.data.new-net OR auditd.data.new-net==? OR +string_equal/$auditd.data.new-net/$~null_parenthesis
     map:
-      - auditd.data.new-net: +delete
+      - auditd.data.new-net: delete()
   - map:
       - auditd.data.new-net: +decode_base16/$auditd.data.new-net
       - auditd.data.new-net: +trim/both/"
@@ -206,7 +206,7 @@ normalize:
 
   - check: +is_null/$auditd.data.device OR auditd.data.device==? OR +string_equal/$auditd.data.device/$~null_parenthesis
     map:
-      - auditd.data.device: +delete
+      - auditd.data.device: delete()
   - map:
       - auditd.data.device: +decode_base16/$auditd.data.device
       - auditd.data.device: +trim/both/"
@@ -214,7 +214,7 @@ normalize:
 
   - check: +is_null/$auditd.data.cgroup OR auditd.data.cgroup==? OR +string_equal/$auditd.data.cgroup/$~null_parenthesis
     map:
-      - auditd.data.cgroup: +delete
+      - auditd.data.cgroup: delete()
   - map:
       - auditd.data.cgroup: +decode_base16/$auditd.data.cgroup
       - auditd.data.cgroup: +trim/both/"
@@ -222,7 +222,7 @@ normalize:
 
   - check: +is_null/$auditd.data.apparmor OR auditd.data.apparmor==? OR +string_equal/$auditd.data.apparmor/$~null_parenthesis
     map:
-      - auditd.data.apparmor: +delete
+      - auditd.data.apparmor: delete()
   - map:
       - auditd.data.apparmor: +decode_base16/$auditd.data.apparmor
       - auditd.data.apparmor: +trim/both/"
@@ -230,7 +230,7 @@ normalize:
 
   - check: +is_null/$auditd.log.operation OR auditd.log.operation==? OR +string_equal/$auditd.log.operation/$~null_parenthesis
     map:
-      - auditd.log.operation: +delete
+      - auditd.log.operation: delete()
   - map:
       - auditd.log.operation: +decode_base16/$auditd.log.operation
       - auditd.log.operation: +trim/both/"
@@ -238,7 +238,7 @@ normalize:
 
   - check: +is_null/$auditd.log.denied_mask OR auditd.log.denied_mask==? OR +string_equal/$auditd.log.denied_mask/$~null_parenthesis
     map:
-      - auditd.log.denied_mask: +delete
+      - auditd.log.denied_mask: delete()
   - map:
       - auditd.log.denied_mask: +decode_base16/$auditd.log.denied_mask
       - auditd.log.denied_mask: +trim/both/"
@@ -246,7 +246,7 @@ normalize:
 
   - check: +is_null/$auditd.log.info OR auditd.log.info==? OR +string_equal/$auditd.log.info/$~null_parenthesis
     map:
-      - auditd.log.info: +delete
+      - auditd.log.info: delete()
   - map:
       - auditd.log.info: +decode_base16/$auditd.log.info
       - auditd.log.info: +trim/both/"
@@ -254,7 +254,7 @@ normalize:
 
   - check: +is_null/$auditd.log.profile OR auditd.log.profile==? OR +string_equal/$auditd.log.profile/$~null_parenthesis
     map:
-      - auditd.log.profile: +delete
+      - auditd.log.profile: delete()
   - map:
       - auditd.log.profile: +decode_base16/$auditd.log.profile
       - auditd.log.profile: +trim/both/"
@@ -262,7 +262,7 @@ normalize:
 
   - check: +is_null/$auditd.log.requested_mask OR auditd.log.requested_mask==? OR +string_equal/$auditd.log.requested_mask/$~null_parenthesis
     map:
-      - auditd.log.requested_mask: +delete
+      - auditd.log.requested_mask: delete()
   - map:
       - auditd.log.requested_mask: +decode_base16/$auditd.log.requested_mask
       - auditd.log.requested_mask: +trim/both/"
@@ -270,7 +270,7 @@ normalize:
 
   - check: +is_null/$auditd.data.old-rng OR auditd.data.old-rng==? OR +string_equal/$auditd.data.old-rng/$~null_parenthesis
     map:
-      - auditd.data.old-rng: +delete
+      - auditd.data.old-rng: delete()
   - map:
       - auditd.data.old-rng: +decode_base16/$auditd.data.old-rng
       - auditd.data.old-rng: +trim/both/"
@@ -278,7 +278,7 @@ normalize:
 
   - check: +is_null/auditd.data.new-rng OR auditd.data.new-rng==? OR +string_equal/$auditd.data.new-rng/$~null_parenthesis
     map:
-      - auditd.data.new-rng: +delete
+      - auditd.data.new-rng: delete()
   - map:
       - auditd.data.new-rng: +decode_base16/$auditd.data.new-rng
       - auditd.data.new-rng: +trim/both/"
@@ -286,7 +286,7 @@ normalize:
 
   - check: +is_null/$auditd.data.ocomm OR auditd.data.ocomm==? OR +string_equal/$auditd.data.ocomm/$~null_parenthesis
     map:
-      - auditd.data.ocomm: +delete
+      - auditd.data.ocomm: delete()
   - map:
       - auditd.data.ocomm: +decode_base16/$auditd.data.ocomm
       - auditd.data.ocomm: +trim/both/"
@@ -294,7 +294,7 @@ normalize:
 
   - check: +is_null/$auditd.data.grp OR auditd.data.grp==? OR +string_equal/$auditd.data.grp/$~null_parenthesis
     map:
-      - auditd.data.grp: +delete
+      - auditd.data.grp: delete()
   - map:
       - auditd.data.grp: +decode_base16/$auditd.data.grp
       - auditd.data.grp: +trim/both/"
@@ -302,7 +302,7 @@ normalize:
 
   - check: +is_null/$auditd.log.new_group OR auditd.log.new_group==? OR +string_equal/$auditd.log.new_group/$~null_parenthesis
     map:
-      - auditd.log.new_group: +delete
+      - auditd.log.new_group: delete()
   - map:
       - auditd.log.new_group: +decode_base16/$auditd.log.new_group
       - auditd.log.new_group: +trim/both/"
@@ -310,7 +310,7 @@ normalize:
 
   - check: +is_null/$auditd.data.invalid_context OR auditd.data.invalid_context==? OR +string_equal/$auditd.data.invalid_context/$~null_parenthesis
     map:
-      - auditd.data.invalid_context: +delete
+      - auditd.data.invalid_context: delete()
   - map:
       - auditd.data.invalid_context: +decode_base16/$auditd.data.invalid_context
       - auditd.data.invalid_context: +trim/both/"
@@ -318,7 +318,7 @@ normalize:
 
   - check: +is_null/$auditd.log.sw OR auditd.log.sw==? OR +string_equal/$auditd.log.sw/$~null_parenthesis
     map:
-      - auditd.log.sw: +delete
+      - auditd.log.sw: delete()
   - map:
       - auditd.log.sw: +decode_base16/$auditd.log.sw
       - auditd.log.sw: +trim/both/"
@@ -326,7 +326,7 @@ normalize:
 
   - check: +is_null/$auditd.log.root_dir OR auditd.log.root_dir==? OR +string_equal/$auditd.log.root_dir/$~null_parenthesis
     map:
-      - auditd.log.root_dir: +delete
+      - auditd.log.root_dir: delete()
   - map:
       - auditd.log.root_dir: +decode_base16/$auditd.log.root_dir
       - auditd.log.root_dir: +trim/both/"
@@ -334,7 +334,7 @@ normalize:
 
   - check: +is_null/$auditd.log.proctitle OR auditd.log.proctitle==? OR +string_equal/$auditd.log.proctitle/$~null_parenthesis
     map:
-      - auditd.log.proctitle: +delete
+      - auditd.log.proctitle: delete()
   - map:
       - auditd.log.proctitle: +decode_base16/$auditd.log.proctitle
       - auditd.log.proctitle: +trim/both/"
@@ -362,16 +362,16 @@ normalize:
   # -- -- -- > map each TARGET = VALUE
 
   # auditd KVDBs event field requests
-  - check: +exists/$auditd.log.record_type
+  - check: exists($auditd.log.record_type)
     map:
       - ~temp_event: +kvdb_get/auditd-types/$auditd.log.record_type
-  - check: +not_exists/$~temp_event AND +exists/auditd.log.syscall
+  - check: not_exists($~temp_event) AND exists($auditd.log.syscall)
     map:
       - ~temp_event: +kvdb_get/auditd-syscall/$auditd.log.record_type
-  - check: +not_exists/$~temp_event
+  - check: +not_exists($~temp_event)
     map:
       - ~temp_event: +kvdb_get/auditd-syscall/*
-  - check: +exists/$~temp_event.event
+  - check: exists($~temp_event.event)
     map:
       # TODO: Check types -> array is transformed to object
       - ~event: +merge/$~temp_event.event
@@ -434,7 +434,7 @@ normalize:
       - container.runtime: $auditd.log.virt
 
   - check:
-      - auditd.log.user: +not_exists
+      - auditd.log.user: not_exists()
     map:
       - user.name: +rename/$auditd.log.acct
 
@@ -449,7 +449,7 @@ normalize:
       - auditd.data.success: true
 
   - check:
-      - auditd.log.src: +not_exists
+      - auditd.log.src: not_exists()
     map:
       - auditd.log.src: $auditd.log.addr
 
@@ -487,8 +487,8 @@ normalize:
       - user.saved.group.id: +rename/$auditd.log.sgid
       - user.saved.id: +rename/$auditd.log.suid
       - user.terminal: +rename/$auditd.log.terminal
-      - auditd.log.kv: +delete
-      - auditd.log.sub_kv: +delete
-      - auditd.log.epoch: +delete
-      - auditd.log.copy: +delete
-      - ~temp_event: +delete
+      - auditd.log.kv: delete()
+      - auditd.log.sub_kv: delete()
+      - auditd.log.epoch: delete()
+      - auditd.log.copy: delete()
+      - ~temp_event: delete()
