--- a/src/engine/ruleset/integrations/fortinet/decoders/fortinet-client-endpoint.yml
+++ b/src/engine/ruleset/integrations/fortinet/decoders/fortinet-client-endpoint.yml
@@ -79,8 +79,8 @@ normalize:
       - tags: [fortinet.clientendpoint, forwarded]
       - user.name: $~tmp.user
       - wazuh.decoders: +array_append/fortinet-client-endpoint
-      - ~log: +delete
-      - ~tmp: +delete
+      - ~log: delete()
+      - ~tmp: delete()
 
 # TODO: Could not map field 'log.offset' due to inability to persist values into different events.
 # Also, there is no helper that allows obtaining the size of an event.
