--- a/src/engine/ruleset/integrations/sophos/decoders/sophos-firewall.yml
+++ b/src/engine/ruleset/integrations/sophos/decoders/sophos-firewall.yml
@@ -130,4 +130,4 @@ normalize:
       - tags: [forwarded, preserve_original_event, sophos-xg]
       - \@timestamp: +concat/$~tmp.date/T/$~tmp.time
       - wazuh.decoders: +array_append/sophos-firewall
-      - ~tmp: +delete
+      - ~tmp: delete()
