--- a/src/engine/ruleset/integrations/sophos/decoders/sophos-sandstorn.yml
+++ b/src/engine/ruleset/integrations/sophos/decoders/sophos-sandstorn.yml
@@ -103,4 +103,4 @@ normalize:
       - tags: [forwarded, preserve_original_even, sophos-xg]
       - \@timestamp: +concat/$~tmp.date/T/$~tmp.time
       - wazuh.decoders: +array_append/sophos-sandstorn
-      - ~tmp: +delete
+      - ~tmp: delete()
