--- a/src/engine/ruleset/integrations/system/decoders/sysmon-linux.yml
+++ b/src/engine/ruleset/integrations/system/decoders/sysmon-linux.yml
@@ -22,7 +22,7 @@ metadata:
 
 check:
   - process.name: sysmon
-  - message: "+starts_with/<Event"
+  - message: "starts_with(<Event)"
   # TODO: Once the events arrive tagged, uncommnet following line
   # - event.module=='sysmon-linux'
 
@@ -116,73 +116,72 @@ normalize:
   - map:
       - event.module: "sysmon-linux"
       - event.dataset: "sysmon"
-      - wazuh.decoders: +array_append/sysmon-linux
 
-      - log.level: +get_value/$lvl_map/$~sysmonEvent.Event.System.Level.#text
+      - log.level: get_value($lvl_map, $~sysmonEvent.Event.System.Level.#text)
       - event.start: $~sysmonEvent.Event.System.TimeCreated.@SystemTime
       - host.name: $~sysmonEvent.Event.System.Computer.#text
       - event.kind: "event"
       - event.code: $~sysmonEvent.Event.System.EventID.#text
 
-      - event: +merge_value/$idEvent_map/$~sysmonEvent.Event.System.EventID.#text
+      - event: merge_value($idEvent_map, $~sysmonEvent.Event.System.EventID.#text)
 
   #########################################################
   #                   Delete invalid fields
   #########################################################
-  - check: +string_equal/$~sysmonEvent.Event.EventData.ConfigurationFileHash/-
+  - check: string_equal($~sysmonEvent.Event.EventData.ConfigurationFileHash,-)
     map:
-      - ~sysmonEvent.Event.EventData.ConfigurationFileHash: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.FileVersion/-
+      - ~sysmonEvent.Event.EventData.ConfigurationFileHash: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.FileVersion,-)
     map:
-      - ~sysmonEvent.Event.EventData.FileVersion: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.Description/-
+      - ~sysmonEvent.Event.EventData.FileVersion: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.Description,-)
     map:
-      - ~sysmonEvent.Event.EventData.Description: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.Product/-
+      - ~sysmonEvent.Event.EventData.Description: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.Product,-)
     map:
-      - ~sysmonEvent.Event.EventData.Product: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.Company/-
+      - ~sysmonEvent.Event.EventData.Product: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.Company,-)
     map:
-      - ~sysmonEvent.Event.EventData.Company: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.OriginalFileName/-
+      - ~sysmonEvent.Event.EventData.Company: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.OriginalFileName,-)
     map:
-      - ~sysmonEvent.Event.EventData.OriginalFileName: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.Hashes/-
+      - ~sysmonEvent.Event.EventData.OriginalFileName: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.Hashes,-)
     map:
-      - ~sysmonEvent.Event.EventData.Hashes: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.User/-
+      - ~sysmonEvent.Event.EventData.Hashes: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.User,-)
     map:
-      - ~sysmonEvent.Event.EventData.User: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.IsExecutable/-
+      - ~sysmonEvent.Event.EventData.User: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.IsExecutable,-)
     map:
-      - ~sysmonEvent.Event.EventData.IsExecutable: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.Archived/-
+      - ~sysmonEvent.Event.EventData.IsExecutable: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.Archived,-)
     map:
-      - ~sysmonEvent.Event.EventData.Archived: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.RuleName/-
+      - ~sysmonEvent.Event.EventData.Archived: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.RuleName,-)
     map:
-      - ~sysmonEvent.Event.EventData.RuleName: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.SourceHostname/-
+      - ~sysmonEvent.Event.EventData.RuleName: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.SourceHostname,-)
     map:
-      - ~sysmonEvent.Event.EventData.SourceHostname: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.SourcePortName/-
+      - ~sysmonEvent.Event.EventData.SourceHostname: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.SourcePortName,-)
     map:
-      - ~sysmonEvent.Event.EventData.SourcePortName: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.DestinationHostname/-
+      - ~sysmonEvent.Event.EventData.SourcePortName: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.DestinationHostname,-)
     map:
-      - ~sysmonEvent.Event.EventData.DestinationHostname: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.DestinationPortName/-
+      - ~sysmonEvent.Event.EventData.DestinationHostname: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.DestinationPortName,-)
     map:
-      - ~sysmonEvent.Event.EventData.DestinationPortName: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.ParentImage/-
+      - ~sysmonEvent.Event.EventData.DestinationPortName: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.ParentImage,-)
     map:
-      - ~sysmonEvent.Event.EventData.ParentImage: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.ParentCommandLine/-
+      - ~sysmonEvent.Event.EventData.ParentImage: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.ParentCommandLine,-)
     map:
-      - ~sysmonEvent.Event.EventData.ParentCommandLine: +delete
-  - check: +string_equal/$~sysmonEvent.Event.EventData.ParentUser/-
+      - ~sysmonEvent.Event.EventData.ParentCommandLine: delete()
+  - check: string_equal($~sysmonEvent.Event.EventData.ParentUser,-)
     map:
-      - ~sysmonEvent.Event.EventData.ParentUser: +delete
+      - ~sysmonEvent.Event.EventData.ParentUser: delete()
 
   - check:
       - event.code: "255"
@@ -194,7 +193,7 @@ normalize:
       - event.provider: $~sysmonEvent.Event.System.Provider.@Name
 
       # TODO: The hash fields are not implemented in sysmon linux yet
-      # ~tmp.hashes: +parse_key_value/$~sysmonEvent.Event.EventData.Hashes/=/,/'/'
+      # ~tmp.hashes: parse_key_value($~sysmonEvent.Event.EventData.Hashes, =, \,, ', ')
       # - related.hash: $~tmp.hashes
 
   #########################################################
@@ -204,13 +203,13 @@ normalize:
   #########################################################
   # TODO: Hashes are not implemented in sysmon linux yet
   # - check: >-
-  #    +string_equal/event.code/1
-  #    OR +string_equal/event.code/23
-  #    OR +string_equal/event.code/24
-  #    OR +string_equal/event.code/25
-  #    OR +string_equal/event.code/26
+  #    string_equal(event.code, 1)
+  #    OR string_equal(event.code, 23)
+  #    OR string_equal(event.code, 24)
+  #    OR string_equal(event.code, 25)
+  #    OR string_equal(event.code, 26)
   #   map:
-  #     - process.pe.imphash: +rename/$~tmp.hashes.imphash #TODO CHECK
+  #     - process.pe.imphash: rename($~tmp.hashes.imphash) #TODO CHECK
   #     - process.hash: $~tmp.hashes
 
   - map:
@@ -220,17 +219,17 @@ normalize:
       - process.executable: $~sysmonEvent.Event.EventData.Image
       # - process.executable: $~sysmonEvent.Event.EventData.SourceImage (Only windows currently)
       # - process.executable: $~sysmonEvent.Event.EventData.Destination (Only windows currently)
-      - process.pid: +parse_long/$~sysmonEvent.Event.EventData.ProcessId
-      # - process.pid: +parse_long/$~sysmonEvent.Event.EventData.SourceProcessId  (Only windows currently)
+      - process.pid: parse_long($~sysmonEvent.Event.EventData.ProcessId)
+      # - process.pid: parse_long($~sysmonEvent.Event.EventData.SourceProcessId)  (Only windows currently)
       - process.command_line: $~sysmonEvent.Event.EventData.CommandLine
       - process.working_directory: $~sysmonEvent.Event.EventData.CurrentDirectory
       - process.parent.entity_id: $~sysmonEvent.Event.EventData.ParentProcessGuid
-      - process.parent.pid: +parse_long/$~sysmonEvent.Event.EventData.ParentProcessId
+      - process.parent.pid: parse_long($~sysmonEvent.Event.EventData.ParentProcessId)
       - process.parent.executable: $~sysmonEvent.Event.EventData.ParentImage
       - process.parent.command_line: $~sysmonEvent.Event.EventData.ParentCommandLine
 
   - check:
-      - event.code: +string_not_equal/7
+      - event.code: string_not_equal(7)
     map:
       - process.pe.original_file_name: $~sysmonEvent.Event.EventData.OriginalFileName
       - process.pe.company: $~sysmonEvent.Event.EventData.Company
@@ -239,25 +238,25 @@ normalize:
       - process.pe.product: $~sysmonEvent.Event.EventData.Product
 
   - map:
-      - ~tmp.file_data: +parse_file/$process.executable
+      - ~tmp.file_data: parse_file($process.executable)
       - process.name: $~tmp.file_data.name
       # Link issue:
-      - process.args: "+split/$process.command_line/ "
+      - process.args: split($process.command_line,  )
 
   - check:
-      - process.parent.executable: +exists
+      - process.parent.executable: exists()
     map:
-      - ~tmp.file_data: +parse_file/$process.parent.executable
+      - ~tmp.file_data: parse_file($process.parent.executable)
       - process.parent.name: $~tmp.file_data.name
       # Link issue:
-      - process.parent.args: "+split/$process.parent.command_line/ "
+      - process.parent.args: split($process.parent.command_line,  )
 
   #########################################################
   #                  Service fields
   # Event id 4 == Sysmon service state changed
   #########################################################
   - check:
-      - event.code: +string_equal/4
+      - event.code: string_equal(4)
     map:
       - event.action: "service_start"
       - service.name: "sysmon"
@@ -268,7 +267,7 @@ normalize:
   # Event id 16 == ServiceConfigurationChange
   #########################################################
   - check:
-      - event.code: +string_equal/16
+      - event.code: string_equal(16)
     map:
       - event.action: "configuration_chage"
       - file.path: $~sysmonEvent.Event.EventData.Configuration
@@ -281,11 +280,11 @@ normalize:
   #########################################################
   # Unimplemented in sysmon linux currently
   # - check: >-
-  #    +string_equal/event.code/6
-  #    OR +string_equal/event.code/7
-  #    OR +string_equal/event.code/15
+  #    string_equal(event.code, 6)
+  #    OR string_equal(event.code, 7)
+  #    OR string_equal(event.code, 15)
   #  map:
-  #        - file.pe.imphash: +rename/$~tmp.hashes.imphash  #TODO CHECK
+  #        - file.pe.imphash: rename($~tmp.hashes.imphash)  #TODO CHECK
   #        - file.hash: $~tmp.hashes
   - map:
       - file.path: $~sysmonEvent.Event.EventData.TargetFilename
@@ -296,14 +295,14 @@ normalize:
       - file.code_signature.status: $~sysmonEvent.Event.EventData.SignatureStatus
 
   - check:
-      - event.code: +string_equal/7
+      - event.code: string_equal(7)
     map:
       - file.pe.original_file_name: $~sysmonEvent.Event.EventData.OriginalFileName
       - file.pe.company: $~sysmonEvent.Event.EventData.Company
       - file.pe.description: $~sysmonEvent.Event.EventData.Description
       - file.pe.file_version: $~sysmonEvent.Event.EventData.FileVersion
       - file.pe.product: $~sysmonEvent.Event.EventData.Product
-      - ~tmp.file_data: +parse_file/$file.path
+      - ~tmp.file_data: parse_file($file.path)
       - file.directory: $~tmp.file_data.path
       - file.extension: $~tmp.file_data.ext
       - file.name: $~tmp.file_data.name
@@ -316,23 +315,23 @@ normalize:
 
   # Unimplemented in sysmon linux currently
   #- check:
-  #  - event.code: +string_not_equal/22
+  #  - event.code: string_not_equal(22)
   #  map:
   #    - network.protocol: $~sysmonEvent.Event.EventData.DestinationPortName
   #    - network.protocol: $~sysmonEvent.Event.EventData.SourcePortName
   #- check:
-  #  - event.code: +string_equal/22
+  #  - event.code: string_equal(22)
   #  map:
   #    - network.protocol: dns
 
   - map:
-      - source.ip: +parse_ip/$~sysmonEvent.Event.EventData.SourceIp
-      - source.domain: +parse_fqdn/$~sysmonEvent.Event.EventData.SourceHostname
-      - source.port: +parse_long/$~sysmonEvent.Event.EventData.SourcePort
+      - source.ip: parse_ip($~sysmonEvent.Event.EventData.SourceIp)
+      - source.domain: parse_fqdn($~sysmonEvent.Event.EventData.SourceHostname)
+      - source.port: parse_long($~sysmonEvent.Event.EventData.SourcePort)
 
-      - destination.ip: +parse_ip/$~sysmonEvent.Event.EventData.DestinationIp
-      - destination.domain: +parse_fqdn/$~sysmonEvent.Event.EventData.DestinationHostname
-      - destination.port: +parse_long/$~sysmonEvent.Event.EventData.DestinationPort
+      - destination.ip: parse_ip($~sysmonEvent.Event.EventData.DestinationIp)
+      - destination.domain: parse_fqdn($~sysmonEvent.Event.EventData.DestinationHostname)
+      - destination.port: parse_long($~sysmonEvent.Event.EventData.DestinationPort)
 
       - dns.question.name: $~sysmonEvent.Event.EventData.QueryName
 
@@ -358,7 +357,7 @@ normalize:
   #########################################################
   - map:
       - user.id: $~sysmonEvent.Event.user.identifier
-      - ~tmp.user_parts: +split/$~sysmonEvent.Event.EventData.user/\
+      - ~tmp.user_parts: split($~sysmonEvent.Event.EventData.user, \\)
       - user.domain: $~tmp.user_parts.0
       - user.name: $~tmp.user_parts.1
       - user.name: $~sysmonEvent.Event.EventData.user
@@ -368,15 +367,18 @@ normalize:
   #     Related fields
   #########################################################
   - map:
-      - related.user: +array_append/$user.name
-      - related.ip: +array_append/$source.ip
-      - related.ip: +array_append/$destination.ip
-      # - related.ip: +array_append/$dns.resolved_ip #TODO
-      - related.hosts: +array_append/$source.domain
-      - related.hosts: +array_append/$destination.domain
-      # - related.hosts: +array_append/$dns.answers #TODO
+      - related.user: array_append($user.name)
+      - related.ip: array_append($source.ip)
+      - related.ip: array_append($destination.ip)
+      # - related.ip: array_append($dns.resolved_ip) #TODO
+      - related.hosts: array_append($source.domain)
+      - related.hosts: array_append($destination.domain)
+      # - related.hosts: array_append($dns.answers) #TODO
 
   # Cleanup
   - map:
-      - ~tmp: +delete
-      - ~sysmonEvent: +delete
+      - ~tmp: delete()
+      - ~sysmonEvent: delete()
+
+  - map:
+      - wazuh.decoders: array_append(sysmon-linux)
