--- a/src/engine/ruleset/integrations/system/decoders/system-auth.yml
+++ b/src/engine/ruleset/integrations/system/decoders/system-auth.yml
@@ -47,11 +47,11 @@ check: $isAuthProcess
 
 normalize:
   - map:
+      - ~empty: ""
       - event.module: "system"
       - event.dataset: "system-auth"
       - event.outcome: "success"
       - event.kind: "event"
-      - wazuh.decoders: +array_append/system-auth
 
   - check:
       - process.name: "sshd"
@@ -67,22 +67,22 @@ normalize:
 
   - check: $~system.auth.ssh.event=="Accepted" OR $~system.auth.ssh.event=="USER_PROCESS"
     map:
-      - event.type: +array_append/access/allowed
-      - event.category: +array_append/authentication/session
+      - event.type: array_append(access, allowed)
+      - event.category: array_append(authentication, session)
       - event.action: "ssh_login"
       - event.outcome: "success"
 
   - check: $~system.auth.ssh.event=="DEAD_PROCESS" OR $~system.auth.ssh.event=="disconnect"
     map:
-      - event.type: +array_append/end
-      - event.category: +array_append/authentication/session
+      - event.type: array_append(end)
+      - event.category: array_append(authentication, session)
       - event.action: "ssh_login"
       - event.outcome: "success"
 
   - check: $~system.auth.ssh.event=="Invalid" OR $~system.auth.ssh.event=="Failed" OR $~system.auth.ssh.event=="failures" OR $~system.auth.ssh.event=="fatal"
     map:
-      - event.type: +array_append/access/denied
-      - event.category: +array_append/authentication/session
+      - event.type: array_append(access, denied)
+      - event.category: array_append(authentication, session)
       - event.action: "ssh_login"
       - event.outcome: "failure"
 
@@ -92,11 +92,11 @@ normalize:
       - message: "<user.name> : <~system.auth.sudo.error> ; TTY=tty<~/literal/\\/>?<~/literal/s><~system.process.tty.char_device.major> ; PWD=<~system.auth.sudo.pwd> ; USER=<user.effective.name> ; COMMAND=<~system.auth.sudo.command>"
       - message: "<user.name> : TTY=tty<~/literal/\\/>?<~/literal/s><~system.process.tty.char_device.major> ; PWD=<~system.auth.sudo.pwd> ; USER=<user.effective.name> ; COMMAND=<~system.auth.sudo.command>"
     map:
-      - event.category: +array_append/process
-      - event.type: +array_append/start
+      - event.category: array_append(process)
+      - event.type: array_append(start)
 
   - check:
-      - message: +contains/pam_
+      - message: contains(pam_)
     logpar:
       - message: "pam_unix\\(<~>:<~>\\): session <~system.auth.pam.session.action> for user <~system.auth.pam.foruser.name> by <~system.auth.pam.byuser.name>\\(uid=\\)"
       - message: "pam_unix\\(<~>:<~>\\): session <~system.auth.pam.session.action> for user <~system.auth.pam.foruser.name> by \\(uid=<user.id>\\)"
@@ -104,33 +104,33 @@ normalize:
       - message: "pam_succeed_if\\(<~>:<~>\\): requirement <~> not met by user <user.name>"
       - message: "pam_unix\\(<~>:<~>\\): authentication <~system.auth.pam.session.action>; logname=<~system.auth.pam.foruser.name>?<~/literal/> uid=<user.id>?<~/literal/> euid=<user.effective.id>?<~/literal/> tty=<~system.auth.pam.tty>?<~/literal/> ruser=<~system.auth.pam.remote.user>?<~/literal/> rhost=<source.ip>?<~/literal/>  user=<user.name>?<~/literal/>"
     map:
-      - event.category: +array_append/authentication/session
+      - event.category: array_append(authentication, session)
 
   - check:
-      - message: +contains/PAM
+      - message: contains(PAM)
     logpar:
       - message: "PAM <~> more authentication <~system.auth.pam.session.action>; logname=<~system.auth.pam.foruser.name>?<~/literal/> uid=<user.id>?<~/literal/> euid=<user.effective.id>?<~/literal/> tty=<~system.auth.pam.tty>?<~/literal/> ruser=<~system.auth.pam.remote.user>?<~/literal/> rhost=<source.ip>?<~/literal/>  user=<user.name>?<~/literal/>"
     map:
-      - event.category: +array_append/authentication/session
+      - event.category: array_append(authentication, session)
 
   - check:
-      - ~system.auth.pam.byuser.name: +string_not_equal/""
+      - ~system.auth.pam.byuser.name: string_not_equal($~empty)
     map:
       - user.name: $~system.auth.pam.byuser.name
       - user.effective.name: $~system.auth.pam.foruser.name
 
   - check:
-      - ~system.auth.pam.byuser.name: +not_exists
+      - ~system.auth.pam.byuser.name: not_exists()
     map:
       - user.name: $~system.auth.pam.foruser.name
 
   - check: $~system.auth.pam.session.action=="opened" OR $~system.auth.ssh.event=="USER_PROCESS"
     map:
-      - event.type: +array_append/start
+      - event.type: array_append(start)
 
   - check: $~system.auth.pam.session.action=="closed"
     map:
-      - event.type: +array_append/end
+      - event.type: array_append(end)
 
   - check: $process.name=="groupadd" OR $process.name=="useradd"
     logpar:
@@ -145,38 +145,41 @@ normalize:
 
   - check: $process.name=="groupadd" OR $process.name=="groupdel" OR $process.name=="groupmod" OR $process.name=="useradd" OR $process.name=="userdel" OR $process.name=="usermod"
     map:
-      - event.category: +array_append/iam
+      - event.category: array_append(iam)
 
   - check: $process.name=="useradd" OR $process.name=="userdel" OR $process.name=="usermod"
     map:
-      - event.type: +array_append/user
+      - event.type: array_append(user)
 
   - check: $process.name=="groupadd" OR $process.name=="groupdel" OR $process.name=="groupmod"
     map:
-      - event.type: +array_append/group
+      - event.type: array_append(group)
 
   - check: $process.name=="groupadd" OR $process.name=="useradd"
     map:
-      - event.type: +array_append/creation
+      - event.type: array_append(creation)
 
   - check: $process.name=="groupdel" OR $process.name=="userdel"
     map:
-      - event.type: +array_append/deletion
+      - event.type: array_append(deletion)
 
   - check: $process.name=="groupmod" OR $process.name=="usermod"
     map:
-      - event.type: +array_append/change
+      - event.type: array_append(change)
 
   - map:
-      - user.name: +replace/"/
-      - user.name: +replace/'/
-      - user.effective.name: +replace/"/
-      - user.effective.name: +replace/'/
+      - user.name: replace(",)
+      - user.name: replace(',)
+      - user.effective.name: replace(",)
+      - user.effective.name: replace(',)
       - source.address: $source.ip
-      - related.user: +array_append/$user.name/$user.effective.name
-      - related.ip: +array_append/$source.ip
+      - related.user: array_append($user.name, $user.effective.name)
+      - related.ip: array_append($source.ip)
       - process.command_line: $~system.auth.sudo.command
       - process.tty.char_device.major: $~system.process.tty.char_device.major
       - process.working_directory: $~system.auth.sudo.pwd
-      - ~TAG: +delete
-      - ~system: +delete
+      - ~TAG: delete()
+      - ~system: delete()
+
+  - map:
+      - wazuh.decoders: array_append(system-auth)
