--- a/src/engine/ruleset/wazuh-core/decoders/core-ciscat.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/core-ciscat.yml
@@ -24,4 +24,4 @@ check:
 normalize:
   - map:
       - wazuh.source: wodle
-      - wazuh.decoders: +array_append/core-ciscat
+      - wazuh.decoders: array_append(core-ciscat)
