--- a/src/engine/ruleset/wazuh-core/decoders/core-dbsync.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/core-dbsync.yml
@@ -24,4 +24,4 @@ check:
 normalize:
   - map:
       - wazuh.source: dbsync
-      - wazuh.decoders: +array_append/core-dbsync
+      - wazuh.decoders: array_append(core-dbsync)
