--- a/src/engine/ruleset/wazuh-core/decoders/core-secure.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/core-secure.yml
@@ -23,4 +23,4 @@ check:
 normalize:
   - map:
       - wazuh.source: remote
-      - wazuh.decoders: +array_append/core-secure
+      - wazuh.decoders: array_append(core-secure)
