--- a/src/engine/ruleset/wazuh-core/decoders/core-windows.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/core-windows.yml
@@ -24,4 +24,4 @@ check:
 normalize:
   - map:
       - wazuh.source: logcollector
-      - wazuh.decoders: +array_append/core-windows
+      - wazuh.decoders: array_append(core-windows)
