--- a/src/engine/ruleset/wazuh-core/decoders/fim/fim-event.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/fim/fim-event.yml
@@ -24,40 +24,43 @@ metadata:
   versions:
     - ""
 check:
-  - ~json.type: +string_equal/event
-  - ~json.data.path: +is_string
-  - ~json.data.type: +is_string
+  - ~json.type: string_equal(event)
+  - ~json.data.path: is_string()
+  - ~json.data.type: is_string()
 
 normalize:
   - map:
       - ~do_save2: false
 
   - check:
-      - ~json.data.type: +string_equal/added
+      - ~json.data.type: string_equal(added)
     map:
       - ~do_save2: true
   - check:
-      - ~json.data.type: +string_equal/modified
+      - ~json.data.type: string_equal(modified)
     map:
       - ~do_save2: true
 
   - check:
-      - ~do_save2: +is_true
+      - ~do_save2: is_true()
     map:
-      - ~json.data.audit: +delete
-      - ~json.data.content_changes: +delete
-      - ~json.data.changed_attributes: +delete
-      - ~json.data.hard_links: +delete
-      - ~json.data.mode: +delete
-      - ~json.data.old_attributes: +delete
-      - ~json.data.type: +delete
-      - ~json.data.tags: +delete
-      - ~query: +concat/agent /$agent.id/ syscheck save2 /$~json.data
-      - ~query_result: +wdb_query/$~query
+      - ~json.data.audit: delete()
+      - ~json.data.content_changes: delete()
+      - ~json.data.changed_attributes: delete()
+      - ~json.data.hard_links: delete()
+      - ~json.data.mode: delete()
+      - ~json.data.old_attributes: delete()
+      - ~json.data.type: delete()
+      - ~json.data.tags: delete()
+      - ~query: concat(agent , $agent.id,  syscheck save2 , $~json.data)
+      - ~query_result: wdb_query($~query)
 
   - check:
-      - ~do_save2: +is_false
-      - ~json.data.type: +string_equal/deleted
+      - ~do_save2: is_false()
+      - ~json.data.type: string_equal(deleted)
     map:
-      - ~query: +concat/agent /$agent.id/ syscheck delete /$~json.data.path
-      - ~query_result: +wdb_query/$~query
+      - ~query: concat(agent , $agent.id,  syscheck delete , $~json.data.path)
+      - ~query_result: wdb_query($~query)
+
+  - map:
+      - wazuh.decoders: array_append(fim-event)
