--- a/src/engine/ruleset/wazuh-core/decoders/fim/fim.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/fim/fim.yml
@@ -25,8 +25,12 @@ parents:
   - decoder/core-syscheck/0
 
 check:
-  - event.original: +starts_with/{
+  - event.original: starts_with({)
 
 parse:
   logpar:
     - event.original: <~json/json>
+
+normalize:
+  - map:
+      - wazuh.decoders: array_append(fim)
