--- a/src/engine/ruleset/wazuh-core/decoders/rootcheck/rootcheck.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/rootcheck/rootcheck.yml
@@ -23,11 +23,11 @@ parents:
 
 normalize:
   - map:
-      - ~time: +system_epoch
-      - ~query: +concat/agent /$agent.id/ rootcheck save /$~time/ /$event.original
-      - ~result: +wdb_query/$~query
-      - ~wazuh.rootcheck.file: +regex_extract/$event.original/(?:f|F)ile '(.*?)'
-      - ~title: "+regex_extract/$event.original/(.*?)(?:(?: {)|$)"
+      - ~time: system_epoch()
+      - ~query: concat(agent , $agent.id,  rootcheck save , $~time,  , $event.original)
+      - ~result: wdb_query($~query)
+      - ~wazuh.rootcheck.file: "regex_extract($event.original, (?:f|F)ile '(.*?)')"
+      - ~title: "regex_extract($event.original, (.*?)(?:(?: {)|$))"
 
   - check:
       - ~result: "2"
@@ -40,24 +40,27 @@ normalize:
       - ~wazuh.rootcheck.update: true
 
   - check:
-      - ~wazuh.rootcheck.file: +not_exists
+      - ~wazuh.rootcheck.file: not_exists()
     map:
-      - ~wazuh.rootcheck.file: "+regex_extract/$event.original/File: (.*?)(?:(?:\\. )|(?:\\.$))"
+      - ~wazuh.rootcheck.file: "regex_extract($event.original, File: (.*?)(?:(?:\\. )|(?:\\.$)))"
 
   - map:
-      - ~title: "+regex_extract/$~title/System Audit: (.*? - .*)"
+      - ~title: "regex_extract($~title, System Audit: (.*? - .*))"
 
   - map:
-      - ~title: "+regex_extract/$~title/^(.*\\.) "
+      - ~title: regex_extract($~title, ^(.*\\.) )
 
   - check:
-      - ~title: "+regex_match/(?:f|F)ile "
+      - ~title: "regex_match((?:f|F)ile )"
     map:
-      - ~pre_file: "+regex_extract/$~title/(.*?(?:f|F)ile) "
-      - ~pos_file: "+regex_extract/$~title/(?:f|F)ile '(?:.*?)'(.*)"
-      - ~title: +concat/$~pre_file/$~pos_file
+      - ~pre_file: "regex_extract($~title, (.*?(?:f|F)ile) )"
+      - ~pos_file: "regex_extract($~title, (?:f|F)ile '(?:.*?)'(.*))"
+      - ~title: concat($~pre_file, $~pos_file)
 
   - check:
-      - ~title: "+regex_match/.+"
+      - ~title: regex_match(.+)
     map:
-      - ~wazuh.rootcheck.title: +rename/$~title
+      - ~wazuh.rootcheck.title: rename($~title)
+
+  - map:
+      - wazuh.decoders: array_append(rootcheck)
